--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -7,7 +7,49 @@
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
-<style></style>
+<style>
+  .lesson-card .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensures max spacing between top and bottom content */
+}
+
+.unit-img {
+    width: 100%; /* Ensures the image takes up the full width of the card */
+    object-fit: cover; /* Ensures the image covers the area without distortion */
+    border: 2px solid white;
+    box-shadow: 0 0 10px 0px black;
+}
+
+#quizBtn {
+  border: 1px solid black;
+  margin-left: 2%;
+  box-shadow: inset 0 0 10px 0px black;
+  font-size: 18px;
+}
+
+#lessonBtn {
+  border: 1px solid black;
+  margin-right: 2%;
+  box-shadow: inset 0 0 10px 0px black;
+  font-size: 18px;
+}
+
+@media (min-width: 768px) { /* Adjusts for medium screens and up */
+  .tiles-container {
+    padding-right: 5rem; /* Increase the right padding */
+  }
+  
+  .widgets-container {
+    padding-left: 5rem; /* Increase the left padding */
+  }
+}
+
+.widgets-container {
+  padding-left: 5rem; /* Keep your existing padding */
+  flex-basis: 350px; /* Example max-width, adjust as needed */
+}
+</style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
@@ -58,7 +100,7 @@
         <!-- More nav items -->
       </ul>
       <span class="navbar-text">
-        <a href="/signout" class="settings-link nb-item">Logout</a>
+        <a href="/signout" class="settings-link nb-item" style="font-size:22px">Logout</a>
       </span>
     </div>
   </nav>
@@ -71,75 +113,27 @@
   </div>
   
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 tiles-container pr-md-3">
       <div class="row">
         
         {% for unit in units %}
         <div class="col-md-6 mb-3">
-            <div class="card lesson-card">
-              <img src="{{unit.description}}" class="img-responsive-img-top unit-img" alt="..." style="height:200px">
-                <div class="card-body">
-                    <h5 class="card-title">{{unit.id}} - {{unit.name}}</h5>
-                    <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
-                    <a href="/lesson/{{unit.id}}" class="btn btn-primary">Lessons</a>
-                    <!-- <a href="/quiz/1" class="btn btn-primary">Quizzes</a>  -->
-                    <a href="#" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" data-unit="{{unit.id}}">Quizzes</a>
-                </div>
-            </div>
-        </div>
+          <div class="card lesson-card">
+              <img src="{{ unit.description }}" class="img-responsive-img-top unit-img" alt="..." style="height:200px">
+              <div class="card-body d-flex flex-column justify-content-between"> <!-- Flexbox utilities to control vertical layout -->
+                  <center><h5 class="card-title" style="font-size: 18px;">{{ unit.id }} - {{ unit.name }}</h5></center>
+                  <!-- Flex container for buttons -->
+                  <div class="mt-auto"> <!-- This class pushes the container to the bottom -->
+                      <div class="btn-group" role="group" style="width: 100%;"> <!-- Button group for side-by-side alignment -->
+                          <a href="/lesson/{{ unit.id }}" class="btn btn-primary" id="lessonBtn">Lessons</a> <!-- flex-fill makes buttons expand to fill the container -->
+                          <a href="#" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" id="quizBtn" data-unit="{{ unit.id }}">Quizzes</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      
         {% endfor %}
-        
-        
-        
-        <!-- <div class="col-md-6 mb-3">
-          <div class="card lesson-card">
-            <img src="{% static 'conversation.jpg' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">1 - Basic Conversation and Phrases</h5>
-              
-              <a href="/lesson" class="btn btn-primary">Lessons</a>
-              
-              <a href="/quiz/1" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" data-unit="1">Quizzes</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="card lesson-card">
-            <img src="{% static 'common_animals.jpg' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">2 - Common Foods and Animal Names</h5>
-              
-              <a href="#" class="btn btn-primary">Lessons</a>
-              <a href="/quiz2" class="btn btn-primary">Quizzes</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="card lesson-card">
-            <img src="{% static 'colors_numbers.jpeg' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">3 - Colors, Numbers and Basic Objects</h5>
-             
-              <a href="#" class="btn btn-primary">Lessons</a>
-              
-              <a href="/quiz3" class="btn btn-primary quiz-button" data-toggle="modal" data-target="#quizModal" data-unit="3">Quizzes</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="card lesson-card">
-            <img src="{% static 'outdoors.jpg' %}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">4 - General Outdoors and Weather</h5>
-              
-              <a href="#" class="btn btn-primary">Lessons</a>
-              
-              <a href="#" class="btn btn-primary" id="quizButton" data-toggle="modal" data-target="#quizModal">
-                Quizzes
-              </a>
-            </div>
-          </div>
-        </div> -->
 
         <!-- Modal -->
         <div class="modal fade" id="quizModal" tabindex="-1" role="dialog" aria-labelledby="quizModalLabel" aria-hidden="true">
@@ -207,28 +201,28 @@
       </div>
     </div>
     
-    <div class="col-md-4 ">
+    <div class="col-md-4 widgets-container pl-md-6">
       <h2 style="color: white">Weather Widget</h2>
       <div class="card mb-3 weather-widget">
         <div class="card-body">
             
-            <h3 class="card-title city-title">{{city}}</h3>
-            <div style="align-items: end; width:60px; float: right;">
-              <img src="{{image}}" alt="Weather Icon" style="max-width: 100px;">
-              <h6 id="localTemp" class="card-text">{{temp_c}}</h6>
+            <h2 class="card-title city-title" style="color: black; font-weight: bold; margin-top: 10px; font-family: Arial, Helvetica, sans-serif;">{{city}}</h2>
+            <div style="position: absolute; top: 10%; right: 10%;">
+              <img src="{{image}}" alt="Weather Icon" style="width: 140%;">
             </div>
-            <h5 id="localTime" class="card-text">{{local_time}}</h5>
-            <h5 id="liveTime">Random</h5>
-            <h6 id="localTemp" class="card-text">{{temp_c}}</h6>
+            <h3 id="localTime" class="card-text" style="margin-top: 10%">{{local_time}}</h3>
+            <h4 id="liveTime"></h4>
+            
+            <h5 id="localTemp" class="card-text">{{temp_c}}</h5>
         </div>
       </div>
     
       <!-- Add other widgets like activity tracker and twitter feed -->
       
-      <h2 style="color: white">Activity Tracker</h2>
-      <div class="card mb-3 calendar-widget">
+      <h2 style="color: white; margin-top: 14%;">Activity Tracker</h2>
+      <div class="card mb-3" id="calendar-container">
       <!-- <div id="calendar-container"> -->
-        
+      
         <table id="loginCalendar" class="calendar">
           <thead>
             <tr>
@@ -401,8 +395,8 @@ function markLoginDates(loginDates, date) {
 
 document.addEventListener('DOMContentLoaded', function() {
     const weatherData = [
-        { country: 'Porto', local_time: '06/03/2024', temp_c: '13.0°C' },
-        { country: 'Madeira', local_time: '06/03/2024', temp_c: '16°C'}
+        { country: 'Porto', local_time: '13th April, 2024', temp_c: '13.0°C' },
+        { country: 'Madeira', local_time: '13th April, 2024', temp_c: '16°C'}
         // Add more cities as needed
     ];
 
