--- a/templates/mainsite/vocab.html
+++ b/templates/mainsite/vocab.html
@@ -7,6 +7,8 @@
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"> <!-- Correct FontAwesome link -->
 <link rel="stylesheet" href="{% static 'architecture.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
@@ -101,6 +103,21 @@
         overflow-y: auto;   /* Enable vertical scrolling */
         overflow-x: hidden; /* Hide horizontal scroll */
     }
+
+    #download-button, #delete-all-button {
+        border-radius: 5px;
+        border: 2px solid black;
+        box-shadow: inset 0px 0px 6px 0px black;
+        height: 40px;
+    }
+
+    #download-button {
+        background-color: rgb(167, 230, 161);
+    }
+
+    #delete-all-button {
+        background-color:rgb(223, 150, 150)
+    }
 </style>
 </head>
 <body>
@@ -149,7 +166,7 @@
         <!-- More nav items -->
       </ul>
       <span class="navbar-text">
-        <a href="/signout" class="settings-link">Logout</a>
+        <a href="/signout" class="settings-link nb-item" style="font-size:22px">Logout</a>
       </span>
     </div>
   </nav>
@@ -178,9 +195,12 @@
                 <!-- User Saved List Tab Pane -->
                 <div class="tab-pane fade show active" id="user-saved" role="tabpanel" aria-labelledby="user-saved-tab">
                     <div style="display: flex; align-items: center; margin-top: 10px;">
-                        <h2 style="margin-right: 10px;">User Saved</h2>
-                        <button style="border: 1px solid black; border-radius:5px">
-                            <i class="fas fa-download"></i>
+                        <h2 style="margin-right: 20px;">User Saved</h2>
+                        <button id="download-button">
+                            <i class="fas fa-download"> Download</i>
+                        </button>
+                        <button id="delete-all-button" style="margin-left: 10px;">
+                            <i class="fas fa-trash"> Delete All</i>
                         </button>
                     </div>
                     <form>
@@ -373,63 +393,7 @@
         </div>
     </div>
     
-
-    <div class="card mb-3 culture-card">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-8">
-                    <input type="text" class="form-control" placeholder="Enter search term...">
-                </div>
-                <div class="col-md-4">
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                        <label class="form-check-label" for="inlineRadio1">English</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                        <label class="form-check-label" for="inlineRadio2">Portuguese</label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mt-4">
-                <div class="col">
-                    <table class="table table-dark table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First Name</th>
-                                <th scope="col">Last Name</th>
-                                <th scope="col">Username</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            
-
-        </div>
-    </div> 
+ 
 
     
     
@@ -449,19 +413,134 @@
     </div>
   </div>
 
+  <!-- Bootstrap Modal -->
+<!-- <div class="modal fade" id="downloadModal" tabindex="-1" aria-labelledby="downloadModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="downloadModalLabel">Download Complete</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Your file has begun downloading.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- Delete Confirmation Modal -->
+  <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete all items?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
 
-// $(document).ready(function() {
-//     $('.filter-option').click(function(e) {
-//         e.preventDefault(); // Prevent the default anchor behavior
-//         var selectedFilter = $(this).text();
-//         $('#filter-dropdown').text(selectedFilter); // Set the button text to the selected filter
-//         $('#filter-dropdown').append(' <span class="caret"></span>'); // Re-add the caret symbol to the button
-//     });
-// });
+$(document).ready(function() {
+    $('#delete-all-button').click(function() {
+        // Show the modal
+        $('#deleteConfirmationModal').modal('show');
+    });
+
+    // Bind click event to the modal's confirm button
+    $('#confirmDeleteButton').click(function() {
+        $.ajax({
+            type: 'POST',
+            url: '/delete_all_saved_words',  // Update URL to match your Django URL configuration
+            data: {
+                csrfmiddlewaretoken: $('input[name="csrfmiddlewaretoken"]').val() // Include CSRF token
+            },
+            success: function(response) {
+                if(response.success) {
+                    // alert('All items have been deleted.');
+                    window.location.reload();  // Reload the page
+                } else {
+                    alert('Failed to delete items: ' + response.error);
+                }
+                $('#deleteConfirmationModal').modal('hide'); // Hide the modal after processing
+            },
+            error: function(xhr, status, error) {
+                alert('An error occurred: ' + error);
+                $('#deleteConfirmationModal').modal('hide'); // Hide the modal on error as well
+            }
+        });
+    });
+});
+
+document.getElementById('download-button').addEventListener('click', function() {
+    var tableData = [];
+    // Get table rows
+    document.querySelectorAll('.user-saved-words-table tbody tr').forEach(function(row) {
+        var rowData = [];
+        row.querySelectorAll('th, td').forEach(function(cell, index) {
+        // Do not include the Actions column
+        if (index < row.querySelectorAll('th, td').length - 1) {
+            // Clone the cell to manipulate it without altering the DOM
+            let clonedCell = cell.cloneNode(true);
+            // Remove any buttons from the cloned cell
+            let buttons = clonedCell.querySelectorAll('button');
+            buttons.forEach(button => button.remove());
+            // Get the text without the button text
+            let text = clonedCell.textContent.trim();
+            rowData.push(text);
+        }
+        });
+        tableData.push(rowData.join(','));
+    });
+
+    // Send the data to the Django backend
+    $.ajax({
+    url: '/download_table', // The URL to your Django download view
+    method: 'POST',
+    data: {
+        'table_data': tableData,
+        'csrfmiddlewaretoken': $('input[name="csrfmiddlewaretoken"]').val() // Pass CSRF token
+    },
+    xhrFields: {
+        // Include this to treat the response as a blob
+        responseType: 'blob'
+    },
+    success: function(blob) {
+        // No need to create a Blob, since the response is already a Blob
+        // Create a download link and trigger it
+        const url = window.URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.style.display = 'none';
+        a.href = url;
+        a.download = 'saved-words.csv'; // specify the download filename
+        document.body.appendChild(a);
+        a.click();
+        window.URL.revokeObjectURL(url);
+        // $('#downloadModal').modal('show'); // or you could use showModalDialog()
+        // setTimeout(function() {
+        //     $('#downloadModal').modal('hide'); // Hide the modal after 2000 milliseconds (2 seconds)
+        // }, 2000);
+    },
+    error: function(xhr, status, error) {
+        console.error('There was an error in downloading the table: ', error);
+    }
+});
+});
 
 $(document).ready(function() {
     $('.delete-button').click(function() {
