--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -443,3 +443,15 @@
   box-shadow: 0px 0px 4px 0px black;
   font-weight: bold;
 }
+
+.correctTick {
+  color: rgb(6, 179, 6);
+  font-size: 24px;
+  margin-left: 5px;
+}
+
+.incorrectTick {
+  color: red;
+  font-size: 24px;
+  margin-left: 5px;
+}
