--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -7,6 +7,7 @@
 <title>Login - PortuguesePro</title>
 <link rel="stylesheet" href="{% static 'signin.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
@@ -70,27 +71,7 @@
             <p class="text-center">Don't have an account? <a href="signup" class="text-primary">Register</a></p>
           </div>
 
-          <!-- Password Reset Modal -->
-          <div class="modal fade" id="passwordResetModal" tabindex="-1" aria-labelledby="passwordResetModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="passwordResetModalLabel">Reset Password</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="passwordResetForm">
-                            <div class="mb-3">
-                                <label for="userEmail" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" required>
-                                <div id="emailHelp" class="form-text">We'll send a link to reset your password.</div>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Send Reset Link</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-          </div>
+
           
         </div>
       </div>
@@ -153,5 +134,28 @@
     });
 });
 </script>
+          <!-- Password Reset Modal -->
+          <div class="modal fade" id="passwordResetModal" tabindex="-1" aria-labelledby="passwordResetModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="passwordResetModalLabel">Reset Password</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="passwordResetForm">
+                            <div class="mb-3">
+                                <label for="userEmail" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" required>
+                                <div id="emailHelp" class="form-text">We'll send a link to reset your password.</div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Send Reset Link</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+       
 </body>
 </html>
